# pyphysim

./: .darglint  .dir-locals.el  .gitattributes  .gitignore  .pre-commit-config.yaml  .projectile  .readthedocs.yml  .style.yapf  .travis.yml  LICENSE.txt  README  README.md  build.py  modulators.py  mypy.ini  py-physim.org  pyproject.toml  requirements.txt  setup.cfg  setup.py  simulations.py
MATLAB/: __init__.py  python2MATLAB.py
apps/: .gitignore  Block Diagonalization.ipynb  IA Results 2x2(1).ipynb  IA Results 2x6(2).ipynb  IA Results 3x3(2).ipynb  IA Results 4x4(2).ipynb  IA Results 6x2(2).ipynb  IA Results.ipynb  IA_Results_NrxNt(Ns).py  __init__.py  ber_plot_template.tikz  configobj_usage_example.py  find_codebook.py  greedy_config_file.txt  greedy_statistics.py  ia_SINRs_and_capacity.py  ia_alt_min.py  ia_config_file.txt  mimo_alamouti_config_file.txt  mimo_blast_config_file.txt  mimo_mrc_config_file.txt  mimo_mrt_config_file.txt  plot_ofdm_PSD.py  simple_BD_with_whitening.py  simple_ia.py  simple_maxsinr.py  simple_maxsinr_quantized.py  simple_precoded_srs.ipynb  simple_precoded_srs.py  simulate_alamouti.py  simulate_bpsk.py  simulate_comp.py  simulate_comp_simple.py  simulate_comp_with_ext_int_simple.py  simulate_greedy_ia.py  simulate_ia.py  simulate_ia_alt_min.py  simulate_ia_closedform.py  simulate_ia_maxsinr.py  simulate_ia_minleakage.py  (+12 more)
apps/awgn_modulators/: simulate_bpsk.py  simulate_parallel_psk.py  simulate_psk.py  simulate_psk_with_traits.py  simulate_qam.py
apps/codebooks/: copia_codebooks_do_cluster_para_ca.sh  find_codebook_config.txt  find_codebook_results  minimum_distance_all_codebooks.py
apps/comp/: comp.py
apps/comp_BD/: Block Diagonalization.ipynb  bd_config_file.txt  simulate_comp.py  simulate_comp_simple.py  simulate_comp_with_ext_int_simple.py
c_extensions/: README
cell/: __init__.py  cell.py  shapes.py
comm/: __init__.py  blockdiagonalization.py  channels.py  mimo.py  modulators.py  ofdm.py  pathloss.py  waterfilling.py
comp/: __init__.py  comp.py
docs/: Applications.rst  MATLAB.rst  Makefile  README  README.md  Simulator Modules.rst  apps.rst  cell.rst  channel_estimation.rst  channels.rst  comm.rst  comp.rst  conf.py  description.rst  extra.rst  ia.rst  index.rst  make.bat  mimo.rst  modulators.rst  modules.rst  packaging.rst  plot.rst  pyphysim.c_extensions.rst  pyphysim.cell.rst  pyphysim.channels.rst  pyphysim.comm.rst  pyphysim.extra.MATLAB.rst  pyphysim.extra.rst  pyphysim.ia.rst  pyphysim.mimo.rst  pyphysim.modulators.rst  pyphysim.pointprocess.rst  pyphysim.progressbar.rst  pyphysim.reference_signals.rst  pyphysim.rst  pyphysim.simulations.rst  pyphysim.subspace.rst  pyphysim.util.rst  reference_signals.rst  (+8 more)
ia/: __init__.py  ia.py
ipython_notebooks/: Alamouti Parallel.ipynb  Alamouti.ipynb  IPython Progressbar.ipynb  Interference Alignment - Alternating Minimizations.ipynb  Interference Alignment - Closed Form.ipynb  Interference Alignment - Max SINR.ipynb  Interference Alignment - Min Leakage Algorithm.ipynb  Interference Alignment Algorithms.ipynb  METIS Simple Scenario 2.ipynb  METIS Simple Scenario.ipynb  MRC.ipynb  Partially Connected.ipynb  PathLoss classes.ipynb  Progress Bar.ipynb  README  TDL_Channel_Frequency_Response.ipynb  TDL_and_OFDM.ipynb  ZadoffchuChannelEstimation-NewClasses.ipynb  ZadoffchuChannelEstimation.ipynb  mimo_alamouti_config_file.txt  python_vs_cython_vs_numba.ipynb
lib/: README
notebooks/: .gitignore  Alamouti.ipynb  IPython Progressbar.ipynb  MRC.ipynb  PathLoss classes.ipynb  QPSK_transmission_with_AWGN_channel.ipynb  TDL_and_OFDM.ipynb  Transmission_with_AWGN_channel.ipynb  Transmission_with_Rayleigh_and_AWGN_channels.ipynb  progress_bars.ipynb  rayleigh_qam_simulator.py
plot/: __init__.py  pgfplotshelper.py  simulationresultsplotter.py
pyphysim/: __init__.py
simulations/: configobjvalidation.py  parameters.py  progressbar.py  results.py  runner.py  simulationhelpers.py
subspace/: __init__.py  metrics.py  projections.py
tests/: .pylintrc  F.npy  README  W.npy  __init__.py  big_H.npy  big_H2.npy  cell_package_test.py  channel_estimation_package_test.py  channels_package_test.py  comm_package_test.py  comp_package_test.py  ia_package_test.py  ipcluster2  ipcluster3  matlab_package_test.py  mimo_package_test.py  modulators_package_test.py  modulators_test.py  pointprocess_package_test.py  progressbar_package_test.py  progressbar_profile.ipynb  reference_signals_package_test.py  simulations_package_test.py  simulations_test.py  srs_package_test.py  subspace_package_test.py  util_package_test.py
uml/: Makefile
util/: README  __init__.py  configobjvalidation.py  conversion.py  darlan.py  misc.py  misc_c.pyx  progressbar.py  simulationhelpers.py  simulations.py
(+211 files in other folders)
